dashboard page  done

--- a/Forums/Announcement/Single/single.html
+++ b/Forums/Announcement/Single/single.html
@@ -88,7 +88,7 @@ We decided to make the celebration extra special this..." />
                                 </ul>
                               </div>
                             <li class="nav-item p-2">
-                                <a class="nav-link fs-6" href="#">Dashboard</a>
+                                <a class="nav-link fs-6" href="/dashboard/purchase-cheats.html">Dashboard</a>
                             </li>
                             <li class="nav-item dropdown p-2">
                               <a class="nav-link dropdown-toggle fs-6" href="../../../Knowledge base/knowledge-base.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -138,7 +138,7 @@ We decided to make the celebration extra special this..." />
                             
                             <li>
                                 <div class="p-navEl ">
-                                    <a href="/dashboard" class="p-navEl-link " data-xf-key="3" data-nav-id="dashboard">Dashboard</a>
+                                    <a href="/dashboard/purchase-cheats.html" class="p-navEl-link " data-xf-key="3" data-nav-id="dashboard">Dashboard</a>
                                 </div>
                             </li>
                             <li>
@@ -154,7 +154,7 @@ We decided to make the celebration extra special this..." />
                             </li>
                             <li>
                                 <div class="p-navEl " data-has-children="true">
-                                    <a href="/community/tickets/" class="p-navEl-link p-navEl-link--splitMenu " data-nav-id="nfTickets">Tickets</a>
+                                    <a href="/Tickets/tickets.html" class="p-navEl-link p-navEl-link--splitMenu " data-nav-id="nfTickets">Tickets</a>
                                     <a data-xf-key="5" data-xf-click="menu" data-menu-pos-ref="< .p-navEl" class="p-navEl-splitTrigger" role="button" tabindex="0" aria-label="Toggle expanded" aria-expanded="false" aria-haspopup="true"></a>
                                     <div class="menu menu--structural" data-menu="menu" aria-hidden="true">
                                         <div class="menu-content">
