--- a/Forums/Announcement/announcement.html
+++ b/Forums/Announcement/announcement.html
@@ -71,7 +71,7 @@
                         </ul>
                       </div>
                     <li class="nav-item p-2">
-                        <a class="nav-link fs-6" href="#">Dashboard</a>
+                        <a class="nav-link fs-6" href="/dashboard/purchase-cheats.html">Dashboard</a>
                     </li>
                     <li class="nav-item dropdown p-2">
                       <a class="nav-link dropdown-toggle fs-6" href="../../Knowledge base/knowledge-base.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -121,7 +121,7 @@
                     
                     <li>
                         <div class="p-navEl ">
-                            <a href="/dashboard" class="p-navEl-link " data-xf-key="3" data-nav-id="dashboard">Dashboard</a>
+                            <a href="/dashboard/purchase-cheats.html" class="p-navEl-link " data-xf-key="3" data-nav-id="dashboard">Dashboard</a>
                         </div>
                     </li>
                     <li>
@@ -137,8 +137,8 @@
                     </li>
                     <li>
                         <div class="p-navEl " data-has-children="true">
-                            <a href="/community/tickets/" class="p-navEl-link p-navEl-link--splitMenu " data-nav-id="nfTickets">Tickets</a>
-                            <a data-xf-key="5" data-xf-click="menu" data-menu-pos-ref="< .p-navEl" class="p-navEl-splitTrigger" role="button" tabindex="0" aria-label="Toggle expanded" aria-expanded="false" aria-haspopup="true"></a>
+                            <a href="/Tickets/tickets.html" class="p-navEl-link p-navEl-link--splitMenu " data-nav-id="nfTickets">Tickets</a>
+                            <a data-xf-key="5" data-xf-click="menu" data-menu-pos-ref="p-navEl" class="p-navEl-splitTrigger" role="button" tabindex="0" aria-label="Toggle expanded" aria-expanded="false" aria-haspopup="true"></a>
                             <div class="menu menu--structural" data-menu="menu" aria-hidden="true">
                                 <div class="menu-content">
                                     <a href="/community/tickets/create" class="menu-linkRow u-indentDepth0 js-offCanvasCopy " data-xf-click="overlay" data-nav-id="nfTicketsOpenNewTicket">Open new ticket</a>
@@ -385,7 +385,7 @@ toufiq
 <a href="/community/forums/announcements.64/mark-read?date=1706502728" class="button--link button" data-xf-click="overlay"><span class="button-text">
 Mark read
 </span></a>
-<a href="/community/forums/announcements.64/watch" class="button--link button" data-xf-click="switch-overlay" data-sk-watch="Watch" data-sk-unwatch="Unwatch"><span class="button-text">
+<a href="#" class="button--link button" data-xf-click="switch-overlay" data-sk-watch="Watch" data-sk-unwatch="Unwatch"><span class="button-text">
 Watch
 </span></a>
 </div>
