--- a/Forums/forums.html
+++ b/Forums/forums.html
@@ -74,7 +74,7 @@
                                 </ul>
                               </div>
                             <li class="nav-item p-2">
-                                <a class="nav-link fs-6" href="#">Dashboard</a>
+                                <a class="nav-link fs-6" href="/dashboard/purchase-cheats.html">Dashboard</a>
                             </li>
                             <li class="nav-item dropdown p-2">
                               <a class="nav-link dropdown-toggle fs-6" href="../Knowledge base/knowledge-base.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -127,7 +127,7 @@
                             
                             <li>
                                 <div class="p-navEl ">
-                                    <a href="/dashboard" class="p-navEl-link " data-xf-key="3" data-nav-id="dashboard">Dashboard</a>
+                                    <a href="/dashboard/purchase-cheats.html" class="p-navEl-link " data-xf-key="3" data-nav-id="dashboard">Dashboard</a>
                                 </div>
                             </li>
                             <li>
@@ -280,7 +280,7 @@
                     <ul class="p-sectionLinks-list">
                         <li>
                             <div class="p-navEl ">
-                                <a href="/community/whats-new/posts/" class="p-navEl-link " data-xf-key="alt+1" data-nav-id="newPosts">New posts</a>
+                                <a href="../dashboard/whats-new.html" class="p-navEl-link " data-xf-key="alt+1" data-nav-id="newPosts">New posts</a>
                             </div>
                         </li>
                         <li>
@@ -398,7 +398,7 @@ Post thread…
 </span>
                                                 <div class="node-main js-nodeMain">
                                                     <h3 class="node-title">
-                                                        <a class="text-color" href="/community/link-forums/dashboard-purchase-cheats.65/" data-xf-init data-shortcut="node-description">Dashboard - Purchase Cheats</a>
+                                                        <a class="text-color" href="../dashboard/purchase-cheats.html" data-xf-init data-shortcut="node-description">Dashboard - Purchase Cheats</a>
                                                     </h3>
                                                     <div class="node-description ">Access the panel to purchase cheats and manage your subscriptions.</div>
                                                 </div>
@@ -473,7 +473,7 @@ Post thread…
                                                             <li>
                                                                 <a href="/community/forums/members-only.97/" class="subNodeLink subNodeLink--forum node--id97 ">
 <span class="xfa-nit-node-icon-small" aria-hidden="true">
-<i class="fa fas fa-user-lock  " style="color: #A08FBD; font-size: 24px;"></i>
+<i class="fa fas fa-user-lock  " style="color: #A08FBD; font-size: 15px;"></i>
 </span>
 Members Only</a>
                                                             </li>
@@ -617,14 +617,14 @@ Members Only</a>
                                                             <li>
                                                                 <a href="/community/forums/creative-corner.11/" class="subNodeLink subNodeLink--forum node--id11 subNodeLink--unread">
 <span class="xfa-nit-node-icon-small" aria-hidden="true">
-<i class="fa fas fa-palette  " style="color: #E8E0F5;  font-size: 24px;"></i>
+<i class="fa fas fa-palette  " style="color: #A08FBD;  font-size: 15px;"></i>
 </span>
 Creative Corner</a>
                                                             </li>
                                                             <li>
                                                                 <a href="/community/link-forums/media-resources.79/" class="subNodeLink subNodeLink--link node--id79">
 <span class="xfa-nit-node-icon-small" aria-hidden="true">
-<i class="fa fas fa-download  " style="color: #A08FBD; font-size: 24px;"></i>
+<i class="fa fas fa-download  " style="color: #A08FBD; font-size: 15px;"></i>
 </span>
 Media Resources</a>
                                                             </li>
