--- a/community/community.html
+++ b/community/community.html
@@ -43,7 +43,7 @@
 <span class="p-nav-menuText">Menu</span>
 </a>
 <div class="p-header-logo p-header-logo--image d-none d-md-block ">
-<a href="">
+<a href="/index.html">
 <img src="logo.svg" srcset alt="INTERWEBZ" width="35px" height="35px" />
 </a>
 </div>
@@ -314,7 +314,7 @@ Register
 <div class="p-breadcrumbs--container--inner">
 <ul class="p-breadcrumbs " itemscope itemtype="https://schema.org/BreadcrumbList">
 <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<a href="" class="home" itemprop="item">
+<a href="/index.html" class="home" itemprop="item">
 	<i class="bi bi-house-door icon-b"></i>
 <span itemprop="name">Home</span>
 </a>
