--- a/Knowledge base/knowledge-base.html
+++ b/Knowledge base/knowledge-base.html
@@ -52,14 +52,14 @@
                         <div class="offcanvas-body p-0">
                           <ul class="navbar-nav justify-content-end flex-grow-1 ">
                             <li class="nav-item p-2">
-                              <a class="nav-link fs-6 active" aria-current="page" href="../index.html">Home</a>
+                              <a class="nav-link fs-6 active" aria-current="page" href="/index.html">Home</a>
                             </li>
                             <li class="nav-item p-2">
                                 <a class="nav-link fs-6 " aria-current="page" href="../Forums/forums.html">Forums</a>
                               </li>
                             
                             <li class="nav-item p-2">
-                                <a class="nav-link fs-6" href="#">Dashboard</a>
+                                <a class="nav-link fs-6" href="/dashboard/purchase-cheats.html">Dashboard</a>
                             </li>
                             <li class="nav-item p-2 is-selected" style="background: #554270; border-radius: 4px;">
                                 <a href="/Knowledge base/knowledge-base.html" style="color: #ede2ff !important; " data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
@@ -99,7 +99,7 @@
                         <ul class="p-nav-list js-offCanvasNavSource">
                             <li>
                                 <div class="p-navEl ">
-                                    <a href="../index.html" class="p-navEl-link " data-xf-key="1" data-nav-id="home">Home</a>
+                                    <a href="/index.html" class="p-navEl-link " data-xf-key="1" data-nav-id="home">Home</a>
                                 </div>
                             </li>
                             <li>
@@ -111,7 +111,7 @@
                             
                             <li>
                                 <div class="p-navEl ">
-                                    <a href="/dashboard" class="p-navEl-link " data-xf-key="3" data-nav-id="dashboard">Dashboard</a>
+                                    <a href="/dashboard/purchase-cheats.html" class="p-navEl-link " data-xf-key="3" data-nav-id="dashboard">Dashboard</a>
                                 </div>
                             </li>
                             <li>
@@ -127,7 +127,7 @@
                             </li>
                             <li>
                                 <div class="p-navEl " data-has-children="true">
-                                    <a href="/community/tickets/" class="p-navEl-link p-navEl-link--splitMenu " data-nav-id="nfTickets">Tickets</a>
+                                    <a href="/Tickets/tickets.html" class="p-navEl-link p-navEl-link--splitMenu " data-nav-id="nfTickets">Tickets</a>
                                     <a data-xf-key="5" data-xf-click="menu" data-menu-pos-ref="< .p-navEl" class="p-navEl-splitTrigger" role="button" tabindex="0" aria-label="Toggle expanded" aria-expanded="false" aria-haspopup="true"></a>
                                     <div class="menu menu--structural" data-menu="menu" aria-hidden="true">
                                         <div class="menu-content">
@@ -299,7 +299,7 @@ toufiq
                 <div class="p-breadcrumbs--container--inner">
                     <ul class="p-breadcrumbs " itemscope itemtype="https://schema.org/BreadcrumbList">
                         <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-                            <a href="../index.html" itemprop="item">
+                            <a href="/index.html" itemprop="item">
 <span itemprop="name" class="text-color"><i class="bi bi-house-door px-2"></i>Home </span>
 </a>
                             <meta itemprop="position" content="1" />
