--- a/community/account/account-details.html
+++ b/community/account/account-details.html
@@ -68,7 +68,7 @@
                                 </ul>
                               </div>
                             <li class="nav-item p-2">
-                                <a class="nav-link fs-6" href="#">Dashboard</a>
+                                <a class="nav-link fs-6" href="/dashboard/purchase-cheats.html">Dashboard</a>
                             </li>
                             <li class="nav-item dropdown p-2">
                               <a href="../../Knowledge base/knowledge-base.html" class="nav-link dropdown-toggle fs-6" href="../../Knowledge base/knowledge-base.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -118,7 +118,7 @@
                             
                             <li>
                                 <div class="p-navEl ">
-                                    <a href="/dashboard" class="p-navEl-link " data-xf-key="3" data-nav-id="dashboard">Dashboard</a>
+                                    <a href="/dashboard/purchase-cheats.html" class="p-navEl-link " data-xf-key="3" data-nav-id="dashboard">Dashboard</a>
                                 </div>
                             </li>
                             <li>
