--- a/community/account/account-details.html
+++ b/community/account/account-details.html
@@ -272,7 +272,7 @@
                         </li>
                         <li>
                             <div class="p-navEl ">
-                                <a href="/community/account/" class="p-navEl-link " data-xf-key="alt+4" data-nav-id="defaultYourAccount">Your account</a>
+                                <a href="/community/account/account-details.html" class="p-navEl-link " data-xf-key="alt+4" data-nav-id="defaultYourAccount">Your account</a>
                             </div>
                         </li>
                         <li>
@@ -370,7 +370,7 @@ Bookmarks
                                                 <a class="blockLink is-selected" href="/community/account/account-details">
 Account details
 </a>
-                                                <a class="blockLink " href="/community/account/security">
+                                                <a class="blockLink " href="/community/account/security.html">
 Password and security
 </a>
                                                 <a class="blockLink " href="/community/account/privacy">
