--- a/community/account/security.html
+++ b/community/account/security.html
@@ -367,7 +367,7 @@ Bookmarks
                                             </div>
                                             <h3 class="block-minorHeader">Settings</h3>
                                             <div class="block-body"  style="background: #483663;">
-                                                <a class="blockLink " href="/community/account/account-details">
+                                                <a class="blockLink " href="/community/account/account-details.html">
 Account details
 </a>
                                                 <a class="blockLink is-selected" href="/community/account/security">
