--- a/Forums/Announcement/Single/single.html
+++ b/Forums/Announcement/Single/single.html
@@ -341,7 +341,7 @@ We decided to make the celebration extra special this..." />
                 </div>
                 <div class="p-offCanvasAccountLink">
                     <div class="offCanvasMenu-linkHolder">
-                        <a href="/community/account/" class="offCanvasMenu-link">
+                        <a href="/community/account/account-details.html" class="offCanvasMenu-link">
 <span class="avatar avatar--xxs avatar--default avatar--default--image" data-user-id="93264" title="toufiq">
 <span class="avatar-u93264-s"></span>
 </span>
