--- a/dashboard/your-orders.html
+++ b/dashboard/your-orders.html
@@ -102,31 +102,31 @@ Notifications
 </div>
 <nav class="flex-1 px-2 space-y-4 sidebar-nav">
 <div class="space-y-1">
-<a href="https://interwebz-cheats.com/dashboard/whats-new" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200">
+<a href="./whats-new.html" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200">
 <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
 <path fill-rule="evenodd" d="M18 3a1 1 0 00-1.447-.894L8.763 6H5a3 3 0 000 6h.28l1.771 5.316A1 1 0 008 18h1a1 1 0 001-1v-4.382l6.553 3.276A1 1 0 0018 15V3z" clip-rule="evenodd" />
 </svg>
 <span class="truncate">What&#039;s New</span>
 </a>
-<a href="https://interwebz-cheats.com/dashboard/purchase-cheats" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200">
+<a href="./purchase-cheats.html" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200">
 <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
 <path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" />
 </svg>
 <span class="truncate">Purchase Cheats</span>
 </a>
-<a href="https://interwebz-cheats.com/dashboard/cheat-status" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200">
+<a href="./cheat-status.html" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200">
 <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
 <path fill-rule="evenodd" d="M5.05 3.636a1 1 0 010 1.414 7 7 0 000 9.9 1 1 0 11-1.414 1.414 9 9 0 010-12.728 1 1 0 011.414 0zm9.9 0a1 1 0 011.414 0 9 9 0 010 12.728 1 1 0 11-1.414-1.414 7 7 0 000-9.9 1 1 0 010-1.414zM7.879 6.464a1 1 0 010 1.414 3 3 0 000 4.243 1 1 0 11-1.415 1.414 5 5 0 010-7.07 1 1 0 011.415 0zm4.242 0a1 1 0 011.415 0 5 5 0 010 7.072 1 1 0 01-1.415-1.415 3 3 0 000-4.242 1 1 0 010-1.415zM10 9a1 1 0 011 1v.01a1 1 0 11-2 0V10a1 1 0 011-1z" clip-rule="evenodd" />
 </svg>
 <span class="truncate">Cheat Status</span>
 </a>
-<a href="https://interwebz-cheats.com/dashboard/your-orders" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 bg-neutral-300 text-neutral-100">
+<a href="./your-orders.html" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 bg-neutral-300 text-neutral-100">
 <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
 <path fill-rule="evenodd" d="M5 4a3 3 0 00-3 3v6a3 3 0 003 3h10a3 3 0 003-3V7a3 3 0 00-3-3H5zm-1 9v-1h5v2H5a1 1 0 01-1-1zm7 1h4a1 1 0 001-1v-1h-5v2zm0-4h5V8h-5v2zM9 8H4v2h5V8z" clip-rule="evenodd" />
 </svg>
 <span class="truncate">Your Orders</span>
 </a>
-<a href="https://interwebz-cheats.com/community" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200" target="__blank" target="__blank">
+<a href="/Forums/forums.html" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200" target="__blank" target="__blank">
 <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
 <path d="M2 5a2 2 0 012-2h7a2 2 0 012 2v4a2 2 0 01-2 2H9l-3 3v-3H4a2 2 0 01-2-2V5z" />
 <path d="M15 7v2a4 4 0 01-4 4H9.828l-1.766 1.767c.28.149.599.233.938.233h2l3 3v-3h2a2 2 0 002-2V9a2 2 0 00-2-2h-1z" />
@@ -139,13 +139,13 @@ Notifications
 Prepaid Codes
 </h3>
 <div class="mt-2 space-y-1">
-<a href="https://interwebz-cheats.com/dashboard/purchase-codes" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200">
+<a href="./purchase-codes.html" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200">
 <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
 <path fill-rule="evenodd" d="M4 4a2 2 0 00-2 2v4a2 2 0 002 2V6h10a2 2 0 00-2-2H4zm2 6a2 2 0 012-2h8a2 2 0 012 2v4a2 2 0 01-2 2H8a2 2 0 01-2-2v-4zm6 4a2 2 0 100-4 2 2 0 000 4z" clip-rule="evenodd" />
 </svg>
 <span class="truncate">Purchase Codes</span>
 </a>
-<a href="https://interwebz-cheats.com/dashboard/redeem-code" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200">
+<a href="./radeem-code.html" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200">
 <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
 <path d="M2 6a2 2 0 012-2h12a2 2 0 012 2v2a2 2 0 100 4v2a2 2 0 01-2 2H4a2 2 0 01-2-2v-2a2 2 0 100-4V6z" />
 </svg>
@@ -164,7 +164,7 @@ Prepaid Codes
 <div class="hidden md:flex md:flex-shrink-0">
 <div class="relative flex flex-col border-r w-72 bg-neutral-500 border-neutral-400">
 <div class="flex flex-col flex-1 h-0 pt-5 pb-4">
-<a href="https://interwebz-cheats.com/dashboard">
+<a href="./purchase-cheats.html">
 <div class="flex items-center flex-shrink-0 px-4">
 <img class="w-auto h-24 mx-auto" src="./styles/logo.svg" alt="INTERWEBZ Logo">
 </div>
@@ -222,31 +222,31 @@ Notifications
 </div>
 <nav class="flex-1 px-2 space-y-4 overflow-y-auto sidebar-nav">
 <div class="space-y-1">
-<a href="https://interwebz-cheats.com/dashboard/whats-new" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200">
+<a href="./whats-new.html" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200">
 <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
 <path fill-rule="evenodd" d="M18 3a1 1 0 00-1.447-.894L8.763 6H5a3 3 0 000 6h.28l1.771 5.316A1 1 0 008 18h1a1 1 0 001-1v-4.382l6.553 3.276A1 1 0 0018 15V3z" clip-rule="evenodd" />
 </svg>
 <span class="truncate">What&#039;s New</span>
 </a>
-<a href="https://interwebz-cheats.com/dashboard/purchase-cheats" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200">
+<a href="./purchase-cheats.html" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200">
 <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
 <path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" />
 </svg>
 <span class="truncate">Purchase Cheats</span>
 </a>
-<a href="https://interwebz-cheats.com/dashboard/cheat-status" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200">
+<a href="./cheat-status.html" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200">
 <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
 <path fill-rule="evenodd" d="M5.05 3.636a1 1 0 010 1.414 7 7 0 000 9.9 1 1 0 11-1.414 1.414 9 9 0 010-12.728 1 1 0 011.414 0zm9.9 0a1 1 0 011.414 0 9 9 0 010 12.728 1 1 0 11-1.414-1.414 7 7 0 000-9.9 1 1 0 010-1.414zM7.879 6.464a1 1 0 010 1.414 3 3 0 000 4.243 1 1 0 11-1.415 1.414 5 5 0 010-7.07 1 1 0 011.415 0zm4.242 0a1 1 0 011.415 0 5 5 0 010 7.072 1 1 0 01-1.415-1.415 3 3 0 000-4.242 1 1 0 010-1.415zM10 9a1 1 0 011 1v.01a1 1 0 11-2 0V10a1 1 0 011-1z" clip-rule="evenodd" />
 </svg>
 <span class="truncate">Cheat Status</span>
 </a>
-<a href="https://interwebz-cheats.com/dashboard/your-orders" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 bg-neutral-300 text-neutral-100">
+<a href="./your-orders.html" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 bg-neutral-300 text-neutral-100">
 <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
 <path fill-rule="evenodd" d="M5 4a3 3 0 00-3 3v6a3 3 0 003 3h10a3 3 0 003-3V7a3 3 0 00-3-3H5zm-1 9v-1h5v2H5a1 1 0 01-1-1zm7 1h4a1 1 0 001-1v-1h-5v2zm0-4h5V8h-5v2zM9 8H4v2h5V8z" clip-rule="evenodd" />
 </svg>
 <span class="truncate">Your Orders</span>
 </a>
-<a href="https://interwebz-cheats.com/community" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200" target="__blank" target="__blank">
+<a href="/Forums/forums.html" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200" target="__blank" target="__blank">
 <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
 <path d="M2 5a2 2 0 012-2h7a2 2 0 012 2v4a2 2 0 01-2 2H9l-3 3v-3H4a2 2 0 01-2-2V5z" />
 <path d="M15 7v2a4 4 0 01-4 4H9.828l-1.766 1.767c.28.149.599.233.938.233h2l3 3v-3h2a2 2 0 002-2V9a2 2 0 00-2-2h-1z" />
@@ -259,13 +259,13 @@ Notifications
 Prepaid Codes
 </h3>
 <div class="mt-2 space-y-1">
-<a href="https://interwebz-cheats.com/dashboard/purchase-codes" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200">
+<a href="./purchase-codes.html" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200">
 <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
 <path fill-rule="evenodd" d="M4 4a2 2 0 00-2 2v4a2 2 0 002 2V6h10a2 2 0 00-2-2H4zm2 6a2 2 0 012-2h8a2 2 0 012 2v4a2 2 0 01-2 2H8a2 2 0 01-2-2v-4zm6 4a2 2 0 100-4 2 2 0 000 4z" clip-rule="evenodd" />
 </svg>
 <span class="truncate">Purchase Codes</span>
 </a>
-<a href="https://interwebz-cheats.com/dashboard/redeem-code" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200">
+<a href="./radeem-code.html" class="flex items-center px-3 py-2 space-x-3 text-sm font-semibold leading-5 transition duration-150 ease-in-out rounded-md group hover:text-neutral-100 hover:bg-neutral-300 focus:text-neutral-100 focus:outline-none focus:bg-neutral-300 text-neutral-200">
 <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
 <path d="M2 6a2 2 0 012-2h12a2 2 0 012 2v2a2 2 0 100 4v2a2 2 0 01-2 2H4a2 2 0 01-2-2v-2a2 2 0 100-4V6z" />
 </svg>
@@ -289,7 +289,7 @@ Prepaid Codes
 <div class="flex-1 min-w-0">
 <h2 class="text-xl font-medium leading-7 text-neutral-100 sm:leading-9 sm:truncate">
 <div class="flex-wrap items-center hidden text-base lg:flex sm:space-x-1 text-neutral-200">
-<a href="https://interwebz-cheats.com/dashboard" class="transition duration-150 ease-in-out hover:text-neutral-100 focus:text-neutral-100 focus:outline-none hover:underline focus:underline">
+<a href="./purchase-cheats.html" class="transition duration-150 ease-in-out hover:text-neutral-100 focus:text-neutral-100 focus:outline-none hover:underline focus:underline">
 Home
 </a>
 <svg class="w-5 h-5 text-neutral-200" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
