--- a/Knowledge base/knowledge-base.html
+++ b/Knowledge base/knowledge-base.html
@@ -66,13 +66,16 @@
                                   knowledge base <i class="bi bi-chevron-down ps-5"></i>
                                 </a>
                               
+                                <div class="collapse show"  id="collapseExample">
+                                  <ul class="card card-body p-1" style="background: transparent;">
+                                    <li><a>News</a></li>
+                                    <li><a>Find threads</a></li>
+                                  </ul>
+                                </div>
                           </li>
-                          <div class="collapse show"  id="collapseExample">
-                            <ul class="card card-body p-1" style="background: transparent;">
-                              <li><a>News</a></li>
-                              <li><a>Find threads</a></li>
-                            </ul>
-                          </div>
+                          <li class="nav-item p-2">
+                            <a class="nav-link fs-6" href="/Tickets/tickets.html">Tickets</a>
+                        </li>
                             
                           </ul>
                         </div>
@@ -152,7 +155,7 @@
                 </button> -->
                 <div class="p-nav-opposite">
                     <div class="p-navgroup p-account p-navgroup--member">
-                        <a href="/community/account/" class="p-navgroup-link p-navgroup-link--iconic p-navgroup-link--user badgeContainer" data-badge="0" data-xf-click="menu" data-xf-key="m" data-menu-pos-ref="< .p-navgroup" aria-expanded="false" aria-haspopup="true">
+                        <a href="/community/account/account-details.html" class="p-navgroup-link p-navgroup-link--iconic p-navgroup-link--user badgeContainer" data-badge="0" data-xf-click="menu" data-xf-key="m" data-menu-pos-ref="< .p-navgroup" aria-expanded="false" aria-haspopup="true">
 <span class="avatar avatar--xxs avatar--default avatar--default--image" data-user-id="93264" title="name">
 <span class="avatar-u93264-s"></span>
 </span>
