--- a/Tickets/tickets.html
+++ b/Tickets/tickets.html
@@ -73,7 +73,7 @@
                                 </ul>
                               </div>
                             <li class="nav-item p-2">
-                                <a class="nav-link fs-6" href="#">Dashboard</a>
+                                <a class="nav-link fs-6" href="/dashboard/purchase-cheats.html">Dashboard</a>
                             </li>
                             <li class="nav-item dropdown p-2">
                               <a href="../Knowledge base/knowledge-base.html" class="nav-link dropdown-toggle fs-6" href="../../../Knowledge base/knowledge-base.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -87,6 +87,9 @@
                                 </li>
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
                               </ul>
+                            </li>
+                            <li class="nav-item p-2">
+                                <a class="nav-link fs-6" href="/Tickets/tickets.html">Tickets</a>
                             </li>
                             
                           </ul>
@@ -123,7 +126,7 @@
                             
                             <li>
                                 <div class="p-navEl ">
-                                    <a href="/dashboard" class="p-navEl-link " data-xf-key="3" data-nav-id="dashboard">Dashboard</a>
+                                    <a href="/dashboard/purchase-cheats.html" class="p-navEl-link " data-xf-key="3" data-nav-id="dashboard">Dashboard</a>
                                 </div>
                             </li>
                             <li>
@@ -151,7 +154,7 @@
                 </button> -->
                 <div class="p-nav-opposite d-flex align-items-center">
                     <div class="p-navgroup p-account p-navgroup--member d-flex align-items-center">
-                        <a href="/community/account/" class="p-navgroup-link p-navgroup-link--iconic p-navgroup-link--user badgeContainer d-flex align-items-center" data-badge="0" data-xf-click="menu" data-xf-key="m" data-menu-pos-ref=".p-navgroup" aria-expanded="false" aria-haspopup="true">
+                        <a href="/community/account/account-details.html" class="p-navgroup-link p-navgroup-link--iconic p-navgroup-link--user badgeContainer d-flex align-items-center" data-badge="0" data-xf-click="menu" data-xf-key="m" data-menu-pos-ref=".p-navgroup" aria-expanded="false" aria-haspopup="true">
         <span class="avatar avatar--xxs avatar--default avatar--default--image" data-user-id="93264" title="name">
         <span class="avatar-u93264-s"></span>
         </span>
