--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="modal-body p-0" >
           <ul class="list-modal p-2 m-0">
             <li>
-                <a href="">Our Cheats</a>
+                <a href="/products/products.html">Our Cheats</a>
             </li>
             <li>
                 <a href="./community/community.html">Community</a>
@@ -109,7 +109,7 @@
     <div class="w-full">
     <div class="items-center hidden space-x-8 md:flex md:ml-10 md:pr-4">
         <div class="dropdown show">
-            <a class="dropdown-toggle whitespace-nowrap our-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="dropdown-toggle whitespace-nowrap our-toggle" href="/products/products.html" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Our Cheats
             </a>
           
