--- a/Forums/Announcement/Single/single.html
+++ b/Forums/Announcement/Single/single.html
@@ -73,10 +73,10 @@ We decided to make the celebration extra special this..." />
                         <div class="offcanvas-body p-0">
                           <ul class="navbar-nav justify-content-end flex-grow-1 ">
                             <li class="nav-item p-2">
-                              <a class="nav-link fs-6 active" aria-current="page" href="../index.html">Home</a>
+                              <a class="nav-link fs-6 active" aria-current="page" href="/index.html">Home</a>
                             </li>
                             <li class="nav-item p-2 " style="background: #554270; border-radius: 4px;">
-                                  <a style="color: #ede2ff !important; " data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                                  <a href="/Forums/forums.html" style="color: #ede2ff !important; " data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                                     Forums <i class="bi bi-chevron-down ps-5"></i>
                                   </a>
                                 
@@ -102,6 +102,9 @@ We decided to make the celebration extra special this..." />
                                 </li>
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
                               </ul>
+                            </li>
+                            <li class="nav-item p-2">
+                                <a class="nav-link fs-6" href="/Tickets/tickets.html">Tickets</a>
                             </li>
                             
                           </ul>
@@ -179,7 +182,7 @@ We decided to make the celebration extra special this..." />
                 </button> -->
                 <div class="p-nav-opposite d-flex align-items-center">
                     <div class="p-navgroup p-account p-navgroup--member d-flex align-items-center">
-                        <a href="/community/account/" class="p-navgroup-link p-navgroup-link--iconic p-navgroup-link--user badgeContainer" data-badge="0" data-xf-click="menu" data-xf-key="m" data-menu-pos-ref=".p-navgroup" aria-expanded="false" aria-haspopup="true">
+                        <a href="/community/account/account-details.html" class="p-navgroup-link p-navgroup-link--iconic p-navgroup-link--user badgeContainer" data-badge="0" data-xf-click="menu" data-xf-key="m" data-menu-pos-ref=".p-navgroup" aria-expanded="false" aria-haspopup="true">
         <span class="avatar avatar--xxs avatar--default avatar--default--image" data-user-id="93264" title="name">
         <span class="avatar-u93264-s"></span>
         </span>
