--- a/Forums/forums.html
+++ b/Forums/forums.html
@@ -89,6 +89,9 @@
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
                               </ul>
                             </li>
+                            <li class="nav-item p-2">
+                                <a class="nav-link fs-6" href="/Tickets/tickets.html">Tickets</a>
+                            </li>
                             
                           </ul>
                         </div>
@@ -168,7 +171,7 @@
                 </button> -->
                 <div class="p-nav-opposite">
                     <div class="p-navgroup p-account p-navgroup--member">
-                        <a href="/community/account/" class="p-navgroup-link p-navgroup-link--iconic p-navgroup-link--user badgeContainer" data-badge="0" data-xf-click="menu" data-xf-key="m" data-menu-pos-ref="< .p-navgroup" aria-expanded="false" aria-haspopup="true">
+                        <a href="/community/account/account-details.html" class="p-navgroup-link p-navgroup-link--iconic p-navgroup-link--user badgeContainer" data-badge="0" data-xf-click="menu" data-xf-key="m" data-menu-pos-ref="< .p-navgroup" aria-expanded="false" aria-haspopup="true">
 <span class="avatar avatar--xxs avatar--default avatar--default--image" data-user-id="93264" title="name">
 <span class="avatar-u93264-s"></span>
 </span>
