--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     
     </head>
-    <body class="font-sans antialiased bg-neutral-600 text-neutral-100" style="">
+    <body class="font-sans antialiased bg-neutral-600 text-neutral-100" >
     <div wire:id="h3RJP3Ej4MnhhYJ86G81" class="flex-1">
     <div x-data="{ navOpen: false }" class="relative overflow-hidden bg-neutral-600 text-neutral-100">
     <div class="max-w-8xl mx-auto px-4 sm:px-6 lg:px-8 lg:items-center lg:flex py-4 lg:py-6">
@@ -60,8 +60,6 @@
         <img class="w-auto h-8 sm:h-10" src="./styles/interwebz/xenforo/logo.svg" alt="INTERWEBZ Logo">
     </a>
     
-    <!-- <button class="btn btn-primary"><i class="fa-solid fa-bars"></i></button> -->
-
     <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary d-block d-md-none fs-4" style="background: transparent; border: none; color: #907bb1;" data-bs-toggle="modal" data-bs-target="#exampleModal">
     <i class="fa-solid fa-bars"></i>
@@ -160,7 +158,7 @@
                         </div>
                         </div>
                     </a>
-                    <a href="https://interwebz-cheats.com/products/call-of-duty-black-ops-cold-war" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
+                    <a href="./products/call-of-duty-black-ops-cold-war.html" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
                             <div class="flex-shrink-0 w-10 h-10">
                             <img src="./styles/storage/430/229e4d2a-bb78-4d06-9c8d-5f7eec37e928.png" class="w-10 h-10 rounded shadow" alt="">
                             </div>
@@ -207,7 +205,7 @@
                             </a>
                             </div>
                             <div class="p-3 border-t bg-neutral-700 sm:p-8 border-neutral-400">
-                            <a href="https://interwebz-cheats.com/products" class="text-decoration-none flow-root p-3 px-4 py-3 -m-3 space-y-1 transition duration-150 ease-in-out rounded-md text-neutral-200 hover:text-neutral-100 hover:bg-neutral-400">
+                            <a href="./products/products.html" class="text-decoration-none flow-root p-3 px-4 py-3 -m-3 space-y-1 transition duration-150 ease-in-out rounded-md text-neutral-200 hover:text-neutral-100 hover:bg-neutral-400">
                             <div class="flex items-center justify-center space-x-3">
                             <div class="text-base font-medium leading-6">
                             View All Cheats
