--- a/products/products.html
+++ b/products/products.html
@@ -93,10 +93,10 @@
                 <!-- <button class="fw-bolder" type="button">Logged in as name <i class="bi bi-arrow-right fs-4"></i></button> -->
                 <a href="/dashboard/purchase-cheats.html" class="flex items-center w-full px-3 py-3 space-x-2 font-medium text-center transition duration-150 ease-in-out border-t border-neutral-350 text-neutral-200 bg-neutral-600 hover:bg-neutral-400 hover:text-neutral-100 focus:outline-none focus:bg-neutral-400 focus:text-neutral-100">
                     <div class="flex-shrink-0">
-                    <img src="./styles/interwebz/xenforo/default-avatar.jpg" alt="toufiq's Avatar" class="w-8 h-8 border rounded-md shadow border-neutral-300">
+                    <img src="./styles/interwebz/xenforo/default-avatar.jpg" alt="name's Avatar" class="w-8 h-8 border rounded-md shadow border-neutral-300">
                     </div>
                     <span>
-                    Logged in as toufiq
+                    Logged in as name
                     </span>
                     </a>
             </div>
@@ -233,10 +233,10 @@ Community
 <div>
 <a href="/dashboard/purchase-cheats.html" class="inline-flex items-center p-2 -mx-2 space-x-3 font-medium transition duration-150 ease-in-out rounded-md whitespace-nowrap text-neutral-200 hover:text-neutral-100 hover:bg-neutral-400">
 <div class="flex-shrink-0">
-<img src="./styles/interwebz/xenforo/default-avatar.jpg" alt="toufiq's Avatar" class="w-8 h-8 border rounded-md shadow border-neutral-300">
+<img src="./styles/interwebz/xenforo/default-avatar.jpg" alt="name's Avatar" class="w-8 h-8 border rounded-md shadow border-neutral-300">
 </div>
 <span class="max-w-sm truncate">
-Logged in as toufiq
+Logged in as name
 </span>
 </a>
 </div>
@@ -268,10 +268,10 @@ Community
 <div>
 <a href="/dashboard/purchase-cheats.html" class="flex items-center w-full px-5 py-3 space-x-2 font-medium text-center transition duration-150 ease-in-out border-t border-neutral-350 text-neutral-200 bg-neutral-600 hover:bg-neutral-400 hover:text-neutral-100 focus:outline-none focus:bg-neutral-400 focus:text-neutral-100">
 <div class="flex-shrink-0">
-<img src="./styles/interwebz/xenforo/default-avatar.jpg" alt="toufiq's Avatar" class="w-8 h-8 border rounded-md shadow border-neutral-300">
+<img src="./styles/interwebz/xenforo/default-avatar.jpg" alt="name's Avatar" class="w-8 h-8 border rounded-md shadow border-neutral-300">
 </div>
 <span>
-Logged in as toufiq
+Logged in as name
 </span>
 </a>
 </div>
