--- a/Tickets/tickets.html
+++ b/Tickets/tickets.html
@@ -75,18 +75,10 @@
                             <li class="nav-item p-2">
                                 <a class="nav-link fs-6" href="/dashboard/purchase-cheats.html">Dashboard</a>
                             </li>
-                            <li class="nav-item dropdown p-2">
-                              <a href="../Knowledge base/knowledge-base.html" class="nav-link dropdown-toggle fs-6" href="../../../Knowledge base/knowledge-base.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <li class="nav-item  p-2">
+                              <a href="../Knowledge base/knowledge-base.html" class="nav-link  fs-6" >
                                 Knowledge base
                               </a>
-                              <ul class="dropdown-menu dropdown-menu-dark">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                  <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                              </ul>
                             </li>
                             <li class="nav-item p-2">
                                 <a class="nav-link fs-6" href="/Tickets/tickets.html">Tickets</a>
