--- a/Forums/forums.html
+++ b/Forums/forums.html
@@ -1259,8 +1259,8 @@ Media Resources</a>
     <script type="40e90c3518bc483601b5614f-text/javascript">
         window.jQuery || document.write('<script src="/community/js/vendor/jquery/jquery-3.5.1.min.js?_v=d92e847c"><\/script>')
     </script>
-    <script src="/community/js/vendor/vendor-compiled.js?_v=d92e847c" type="40e90c3518bc483601b5614f-text/javascript"></script>
-    <script src="/community/js/xf/core-compiled.js?_v=d92e847c" type="40e90c3518bc483601b5614f-text/javascript"></script>
+    <!-- <script src="/community/js/vendor/vendor-compiled.js?_v=d92e847c" type="40e90c3518bc483601b5614f-text/javascript"></script>
+    <script src="/community/js/xf/core-compiled.js?_v=d92e847c" type="40e90c3518bc483601b5614f-text/javascript"></script> -->
     <script type="40e90c3518bc483601b5614f-text/javascript">
         jQuery.extend(true, XF.config, {
             // 
@@ -1417,7 +1417,7 @@ Media Resources</a>
             }
         }
     </script>
-    <script type="text/template" id="xfReactTooltipTemplate">
+    <!-- <script type="text/template" id="xfReactTooltipTemplate">
         <div class="tooltip-content-inner">
             <div class="reactTooltip">
 
@@ -1436,7 +1436,7 @@ Media Resources</a>
             </div>
         </div>
     </script>
-    <script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="40e90c3518bc483601b5614f-|49" defer></script>
+    <script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="40e90c3518bc483601b5614f-|49" defer></script> -->
     <script defer src="https://static.cloudflareinsights.com/beacon.min.js/v84a3a4012de94ce1a686ba8c167c359c1696973893317" integrity="sha512-euoFGowhlaLqXsPWQ48qSkBSCFs3DPRyiwVu3FjR96cMPx+Fr+gpWRhIafcHwqwCqWS42RZhIudOvEI+Ckf6MA==" data-cf-beacon='{"rayId":"84b9079ecf627c3a","version":"2024.1.0","token":"6804e66e506340e3a1643802f2023a2c"}'
         crossorigin="anonymous"></script>
 </body>
