--- a/Knowledge base/knowledge-base.html
+++ b/Knowledge base/knowledge-base.html
@@ -489,8 +489,8 @@ toufiq
     <script type="462a43b1b390f9941ee00716-text/javascript">
         window.jQuery || document.write('<script src="/community/js/vendor/jquery/jquery-3.5.1.min.js?_v=d92e847c"><\/script>')
     </script>
-    <script src="/community/js/vendor/vendor-compiled.js?_v=d92e847c" type="462a43b1b390f9941ee00716-text/javascript"></script>
-    <script src="/community/js/xf/core-compiled.js?_v=d92e847c" type="462a43b1b390f9941ee00716-text/javascript"></script>
+    <!-- <script src="/community/js/vendor/vendor-compiled.js?_v=d92e847c" type="462a43b1b390f9941ee00716-text/javascript"></script>
+    <script src="/community/js/xf/core-compiled.js?_v=d92e847c" type="462a43b1b390f9941ee00716-text/javascript"></script> -->
     <script type="462a43b1b390f9941ee00716-text/javascript">
         jQuery.extend(true, XF.config, {
             // 
@@ -635,7 +635,7 @@ toufiq
     <form style="display:none" hidden="hidden">
         <input type="text" name="_xfClientLoadTime" value id="_xfClientLoadTime" title="_xfClientLoadTime" tabindex="-1" />
     </form>
-    <script type="text/template" id="xfReactTooltipTemplate">
+    <!-- <script type="text/template" id="xfReactTooltipTemplate">
         <div class="tooltip-content-inner">
             <div class="reactTooltip">
 
@@ -654,7 +654,7 @@ toufiq
             </div>
         </div>
     </script>
-    <script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="462a43b1b390f9941ee00716-|49" defer></script>
+    <script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="462a43b1b390f9941ee00716-|49" defer></script> -->
     <script>
         (function() {
             var js = "window['__CF$cv$params']={r:'84cf8d6fbbe87715',t:'MTcwNjUxMTE0OC4xOTAwMDA='};_cpo=document.createElement('script');_cpo.nonce='',_cpo.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js',document.getElementsByTagName('head')[0].appendChild(_cpo);";
