--- a/Tickets/tickets.html
+++ b/Tickets/tickets.html
@@ -419,8 +419,8 @@ toufiq
     <script type="18c939abcc7ee3019a5828ea-text/javascript">
         window.jQuery || document.write('<script src="/community/js/vendor/jquery/jquery-3.5.1.min.js?_v=d92e847c"><\/script>')
     </script>
-    <script src="/community/js/vendor/vendor-compiled.js?_v=d92e847c" type="18c939abcc7ee3019a5828ea-text/javascript"></script>
-    <script src="/community/js/xf/core-compiled.js?_v=d92e847c" type="18c939abcc7ee3019a5828ea-text/javascript"></script>
+    <!-- <script src="/community/js/vendor/vendor-compiled.js?_v=d92e847c" type="18c939abcc7ee3019a5828ea-text/javascript"></script>
+    <script src="/community/js/xf/core-compiled.js?_v=d92e847c" type="18c939abcc7ee3019a5828ea-text/javascript"></script> -->
     <script type="18c939abcc7ee3019a5828ea-text/javascript">
         jQuery.extend(true, XF.config, {
             // 
@@ -565,7 +565,7 @@ toufiq
     <form style="display:none" hidden="hidden">
         <input type="text" name="_xfClientLoadTime" value id="_xfClientLoadTime" title="_xfClientLoadTime" tabindex="-1" />
     </form>
-    <script type="text/template" id="xfReactTooltipTemplate">
+    <!-- <script type="text/template" id="xfReactTooltipTemplate">
         <div class="tooltip-content-inner">
             <div class="reactTooltip">
 
@@ -584,7 +584,7 @@ toufiq
             </div>
         </div>
     </script>
-    <script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="18c939abcc7ee3019a5828ea-|49" defer></script>
+    <script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="18c939abcc7ee3019a5828ea-|49" defer></script> -->
     <script defer src="https://static.cloudflareinsights.com/beacon.min.js/v84a3a4012de94ce1a686ba8c167c359c1696973893317" integrity="sha512-euoFGowhlaLqXsPWQ48qSkBSCFs3DPRyiwVu3FjR96cMPx+Fr+gpWRhIafcHwqwCqWS42RZhIudOvEI+Ckf6MA==" data-cf-beacon='{"rayId":"84d8488c8c337703","version":"2024.1.0","token":"6804e66e506340e3a1643802f2023a2c"}'
         crossorigin="anonymous"></script>
 </body>
