--- a/dashboard/purchase-cheats.html
+++ b/dashboard/purchase-cheats.html
@@ -21,7 +21,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="https://interwebz-cheats.com/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="https://interwebz-cheats.com/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="https://interwebz-cheats.com/favicons/favicon-16x16.png" />
-    <link rel="manifest" href="https://interwebz-cheats.com/favicons/site.webmanifest" />
+    <link rel="manifest" href="" />
     <link rel="mask-icon" href="https://interwebz-cheats.com/favicons/safari-pinned-tab.svg" color="#2d2145" />
     <meta name="apple-mobile-web-app-title" content="INTERWEBZ Dashboard" />
     <meta name="application-name" content="INTERWEBZ Dashboard" />
@@ -797,8 +797,8 @@ Purchase Cheats
         <div>
         </div>
     </div>
-    <script src="/livewire/livewire.js?id=90730a3b0e7144480175" data-turbo-eval="false" data-turbolinks-eval="false" type="4a80d76478b600e12733468d-text/javascript"></script>
-    <script data-turbo-eval="false" data-turbolinks-eval="false" type="4a80d76478b600e12733468d-text/javascript">
+    <!-- <script src="/livewire/livewire.js?id=90730a3b0e7144480175" data-turbo-eval="false" data-turbolinks-eval="false" type="4a80d76478b600e12733468d-text/javascript"></script> -->
+    <!-- <script data-turbo-eval="false" data-turbolinks-eval="false" type="4a80d76478b600e12733468d-text/javascript">
         window.livewire = new Livewire();
         window.Livewire = window.livewire;
         window.livewire_app_url = '';
@@ -821,10 +821,10 @@ Purchase Cheats
                 started = true;
             }
         });
-    </script>
-    <script src="/js/app.js?id=3ca22a1bfa1495468248" defer type="4a80d76478b600e12733468d-text/javascript"></script>
+    </script> -->
+    <!-- <script src="/js/app.js?id=3ca22a1bfa1495468248" defer type="4a80d76478b600e12733468d-text/javascript"></script> -->
     <script src="https://js.stripe.com/v3/" type="4a80d76478b600e12733468d-text/javascript"></script>
-    <script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="4a80d76478b600e12733468d-|49" defer></script>
+    <!-- <script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="4a80d76478b600e12733468d-|49" defer></script> -->
     <script defer src="https://static.cloudflareinsights.com/beacon.min.js/v84a3a4012de94ce1a686ba8c167c359c1696973893317" integrity="sha512-euoFGowhlaLqXsPWQ48qSkBSCFs3DPRyiwVu3FjR96cMPx+Fr+gpWRhIafcHwqwCqWS42RZhIudOvEI+Ckf6MA==" data-cf-beacon='{"rayId":"84e9f4624d8a7c39","version":"2024.1.0","token":"6804e66e506340e3a1643802f2023a2c"}'
         crossorigin="anonymous"></script>
 </body>
