--- a/products/products.html
+++ b/products/products.html
@@ -29,7 +29,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="https://interwebz-cheats.com/favicons/apple-touch-icon.png" />
 <link rel="icon" type="image/png" sizes="32x32" href="https://interwebz-cheats.com/favicons/favicon-32x32.png" />
 <link rel="icon" type="image/png" sizes="16x16" href="https://interwebz-cheats.com/favicons/favicon-16x16.png" />
-<link rel="manifest" href="https://interwebz-cheats.com/favicons/site.webmanifest" />
+<link rel="manifest" href="" />
 <link rel="mask-icon" href="https://interwebz-cheats.com/favicons/safari-pinned-tab.svg" color="#2d2145" />
 <meta name="apple-mobile-web-app-title" content="INTERWEBZ" />
 <meta name="application-name" content="INTERWEBZ" />
@@ -733,9 +733,9 @@ Contact Us
 </div>
 </div>
 
-<script src="/livewire/livewire.js?id=90730a3b0e7144480175" data-turbo-eval="false" data-turbolinks-eval="false" type="f2a160b652d7061eca687fdd-text/javascript"></script><script data-turbo-eval="false" data-turbolinks-eval="false" type="f2a160b652d7061eca687fdd-text/javascript">window.livewire = new Livewire();window.Livewire = window.livewire;window.livewire_app_url = '';window.livewire_token = 'BQjgssruJubJ58vW5zptol399SoyzLHrInQZRRCH';window.deferLoadingAlpine = function (callback) {window.addEventListener('livewire:load', function () {callback();});};let started = false;window.addEventListener('alpine:initializing', function () {if (! started) {window.livewire.start();started = true;}});document.addEventListener("DOMContentLoaded", function () {if (! started) {window.livewire.start();started = true;}});</script>
-<script src="/js/landing.js?id=97a1a4b0ff47cbeb992e" defer type="f2a160b652d7061eca687fdd-text/javascript"></script>
+<!-- <script src="/livewire/livewire.js?id=90730a3b0e7144480175" data-turbo-eval="false" data-turbolinks-eval="false" type="f2a160b652d7061eca687fdd-text/javascript"></script><script data-turbo-eval="false" data-turbolinks-eval="false" type="f2a160b652d7061eca687fdd-text/javascript">window.livewire = new Livewire();window.Livewire = window.livewire;window.livewire_app_url = '';window.livewire_token = 'BQjgssruJubJ58vW5zptol399SoyzLHrInQZRRCH';window.deferLoadingAlpine = function (callback) {window.addEventListener('livewire:load', function () {callback();});};let started = false;window.addEventListener('alpine:initializing', function () {if (! started) {window.livewire.start();started = true;}});document.addEventListener("DOMContentLoaded", function () {if (! started) {window.livewire.start();started = true;}});</script>
+<script src="/js/landing.js?id=97a1a4b0ff47cbeb992e" defer type="f2a160b652d7061eca687fdd-text/javascript"></script> -->
 <script src="https://js.stripe.com/v3/" type="f2a160b652d7061eca687fdd-text/javascript"></script>
-<script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="f2a160b652d7061eca687fdd-|49" defer></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/v84a3a4012de94ce1a686ba8c167c359c1696973893317" integrity="sha512-euoFGowhlaLqXsPWQ48qSkBSCFs3DPRyiwVu3FjR96cMPx+Fr+gpWRhIafcHwqwCqWS42RZhIudOvEI+Ckf6MA==" data-cf-beacon='{"rayId":"851da4e2b9be7c40","version":"2024.2.0","token":"6804e66e506340e3a1643802f2023a2c"}' crossorigin="anonymous"></script>
+<!-- <script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="f2a160b652d7061eca687fdd-|49" defer></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/v84a3a4012de94ce1a686ba8c167c359c1696973893317" integrity="sha512-euoFGowhlaLqXsPWQ48qSkBSCFs3DPRyiwVu3FjR96cMPx+Fr+gpWRhIafcHwqwCqWS42RZhIudOvEI+Ckf6MA==" data-cf-beacon='{"rayId":"851da4e2b9be7c40","version":"2024.2.0","token":"6804e66e506340e3a1643802f2023a2c"}' crossorigin="anonymous"></script> -->
 </body>
 </html>
