--- a/Forums/Announcement/Single/single.html
+++ b/Forums/Announcement/Single/single.html
@@ -565,9 +565,10 @@ You have insufficient privileges to reply here.
     <script type="e649c3594f7c04ddc1567caf-text/javascript">
         window.jQuery || document.write('<script src="/community/js/vendor/jquery/jquery-3.5.1.min.js?_v=d92e847c"><\/script>')
     </script>
-    <script src="/community/js/vendor/vendor-compiled.js?_v=d92e847c" type="e649c3594f7c04ddc1567caf-text/javascript"></script>
+    <!-- <script src="/community/js/vendor/vendor-compiled.js?_v=d92e847c" type="e649c3594f7c04ddc1567caf-text/javascript"></script>
     <script src="/community/js/xf/core-compiled.js?_v=d92e847c" type="e649c3594f7c04ddc1567caf-text/javascript"></script>
     <script src="/community/js/bs/scheduled_posting/scheduled_post.min.js?_v=d92e847c" type="e649c3594f7c04ddc1567caf-text/javascript"></script>
+     -->
     <script type="e649c3594f7c04ddc1567caf-text/javascript">
         jQuery.extend(true, XF.config, {
             // 
@@ -715,7 +716,7 @@ You have insufficient privileges to reply here.
     <form style="display:none" hidden="hidden">
         <input type="text" name="_xfClientLoadTime" value id="_xfClientLoadTime" title="_xfClientLoadTime" tabindex="-1" />
     </form>
-    <script type="text/template" id="xfReactTooltipTemplate">
+    <!-- <script type="text/template" id="xfReactTooltipTemplate">
         <div class="tooltip-content-inner">
             <div class="reactTooltip">
 
@@ -763,7 +764,7 @@ You have insufficient privileges to reply here.
             }
         }
     </script>
-    <script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="e649c3594f7c04ddc1567caf-|49" defer></script>
+    <script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="e649c3594f7c04ddc1567caf-|49" defer></script> -->
     <script defer src="https://static.cloudflareinsights.com/beacon.min.js/v84a3a4012de94ce1a686ba8c167c359c1696973893317" integrity="sha512-euoFGowhlaLqXsPWQ48qSkBSCFs3DPRyiwVu3FjR96cMPx+Fr+gpWRhIafcHwqwCqWS42RZhIudOvEI+Ckf6MA==" data-cf-beacon='{"rayId":"84d0b8f62ee27716","version":"2024.1.0","token":"6804e66e506340e3a1643802f2023a2c"}'
         crossorigin="anonymous"></script>
 </body>
