--- a/Forums/Announcement/announcement.html
+++ b/Forums/Announcement/announcement.html
@@ -1250,8 +1250,9 @@ Watch
 <a href="#top" class="button--scroll button" data-xf-click="scroll-to"><span class="button-text"><i class="fa--xf far fa-chevron-up" aria-hidden="true"></i><span class="u-srOnly">Top</span></span></a>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="e737bed4149ddc7ecb0058e4-text/javascript"></script><script type="e737bed4149ddc7ecb0058e4-text/javascript">window.jQuery || document.write('<script src="/community/js/vendor/jquery/jquery-3.5.1.min.js?_v=d92e847c"><\/script>')</script>
-<script src="/community/js/vendor/vendor-compiled.js?_v=d92e847c" type="e737bed4149ddc7ecb0058e4-text/javascript"></script>
-<script src="/community/js/xf/core-compiled.js?_v=d92e847c" type="e737bed4149ddc7ecb0058e4-text/javascript"></script>
+<!-- <script src="/community/js/vendor/vendor-compiled.js?_v=d92e847c" type="e737bed4149ddc7ecb0058e4-text/javascript"></script>
+<script src="/community/js/xf/core-compiled.js?_v=d92e847c" type="e737bed4149ddc7ecb0058e4-text/javascript"></script> -->
+
 <script type="e737bed4149ddc7ecb0058e4-text/javascript">
 		jQuery.extend(true, XF.config, {
 			// 
@@ -1394,7 +1395,7 @@ bssp_now: "Now",
 <form style="display:none" hidden="hidden">
 <input type="text" name="_xfClientLoadTime" value id="_xfClientLoadTime" title="_xfClientLoadTime" tabindex="-1" />
 </form>
-<script type="text/template" id="xfReactTooltipTemplate">
+<!-- <script type="text/template" id="xfReactTooltipTemplate">
 		<div class="tooltip-content-inner">
 			<div class="reactTooltip">
 				
@@ -1412,7 +1413,7 @@ bssp_now: "Now",
 				
 			</div>
 		</div>
-	</script>
-<script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="e737bed4149ddc7ecb0058e4-|49" defer></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/v84a3a4012de94ce1a686ba8c167c359c1696973893317" integrity="sha512-euoFGowhlaLqXsPWQ48qSkBSCFs3DPRyiwVu3FjR96cMPx+Fr+gpWRhIafcHwqwCqWS42RZhIudOvEI+Ckf6MA==" data-cf-beacon='{"rayId":"84cebfe1efbc7704","version":"2024.1.0","token":"6804e66e506340e3a1643802f2023a2c"}' crossorigin="anonymous"></script>
+	</script> -->
+<!-- <script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="e737bed4149ddc7ecb0058e4-|49" defer></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/v84a3a4012de94ce1a686ba8c167c359c1696973893317" integrity="sha512-euoFGowhlaLqXsPWQ48qSkBSCFs3DPRyiwVu3FjR96cMPx+Fr+gpWRhIafcHwqwCqWS42RZhIudOvEI+Ckf6MA==" data-cf-beacon='{"rayId":"84cebfe1efbc7704","version":"2024.1.0","token":"6804e66e506340e3a1643802f2023a2c"}' crossorigin="anonymous"></script> -->
 </body>
 </html>
