--- a/community/account/account-details.html
+++ b/community/account/account-details.html
@@ -854,13 +854,14 @@ Ignoring
     <script type="78b77f39506b02cd23924c81-text/javascript">
         window.jQuery || document.write('<script src="/community/js/vendor/jquery/jquery-3.5.1.min.js?_v=d92e847c"><\/script>')
     </script>
-    <script src="/community/js/vendor/vendor-compiled.js?_v=d92e847c" type="78b77f39506b02cd23924c81-text/javascript"></script>
+    <!-- <script src="/community/js/vendor/vendor-compiled.js?_v=d92e847c" type="78b77f39506b02cd23924c81-text/javascript"></script>
     <script src="/community/js/xf/core-compiled.js?_v=d92e847c" type="78b77f39506b02cd23924c81-text/javascript"></script>
     <script src="/community/js/xf/editor-compiled.js?_v=d92e847c" type="78b77f39506b02cd23924c81-text/javascript"></script>
     <script src="/community/js/vendor/froala/plugins/fullscreen.min.js?_v=d92e847c" type="78b77f39506b02cd23924c81-text/javascript"></script>
     <script src="/community/js/editor-manager/plugins/specialCharacters.plugin.min.js?_v=d92e847c" type="78b77f39506b02cd23924c81-text/javascript"></script>
     <script src="/community/js/editor-manager/plugins/unlinkAll.plugin.min.js?_v=d92e847c" type="78b77f39506b02cd23924c81-text/javascript"></script>
     <script src="/community/js/editor-manager/base.min.js?_v=d92e847c" type="78b77f39506b02cd23924c81-text/javascript"></script>
+     -->
     <script type="78b77f39506b02cd23924c81-text/javascript">
         jQuery.extend(true, XF.config, {
             // 
