--- a/community/community.html
+++ b/community/community.html
@@ -456,10 +456,11 @@ By continuing to use this site, you are consenting to our use of cookies.
 <a href="#top" class="button--scroll button" data-xf-click="scroll-to"><span class="button-text"><i class="fa--xf far fa-chevron-up" aria-hidden="true"></i><span class="u-srOnly">Top</span></span></a>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="7ec06a8ae0b7843381bb8eec-text/javascript"></script><script type="7ec06a8ae0b7843381bb8eec-text/javascript">window.jQuery || document.write('<script src="/community/js/vendor/jquery/jquery-3.5.1.min.js?_v=d92e847c"><\/script>')</script>
-<script src="/community/js/vendor/vendor-compiled.js?_v=d92e847c" type="7ec06a8ae0b7843381bb8eec-text/javascript"></script>
+<!-- <script src="/community/js/vendor/vendor-compiled.js?_v=d92e847c" type="7ec06a8ae0b7843381bb8eec-text/javascript"></script>
 <script src="/community/js/xf/core-compiled.js?_v=d92e847c" type="7ec06a8ae0b7843381bb8eec-text/javascript"></script>
 <script src="/community/js/xf/login_signup.min.js?_v=d92e847c" type="7ec06a8ae0b7843381bb8eec-text/javascript"></script>
-<script src="/community/js/xf/notice.min.js?_v=d92e847c" type="7ec06a8ae0b7843381bb8eec-text/javascript"></script>
+<script src="/community/js/xf/notice.min.js?_v=d92e847c" type="7ec06a8ae0b7843381bb8eec-text/javascript"></script> -->
+
 <script type="7ec06a8ae0b7843381bb8eec-text/javascript">
 		jQuery.extend(true, XF.config, {
 			// 
