--- a/dashboard/radeem-code.html
+++ b/dashboard/radeem-code.html
@@ -21,7 +21,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="https://interwebz-cheats.com/favicons/apple-touch-icon.png" />
 <link rel="icon" type="image/png" sizes="32x32" href="https://interwebz-cheats.com/favicons/favicon-32x32.png" />
 <link rel="icon" type="image/png" sizes="16x16" href="https://interwebz-cheats.com/favicons/favicon-16x16.png" />
-<link rel="manifest" href="https://interwebz-cheats.com/favicons/site.webmanifest" />
+<link rel="manifest" href="" />
 <link rel="mask-icon" href="https://interwebz-cheats.com/favicons/safari-pinned-tab.svg" color="#2d2145" />
 <meta name="apple-mobile-web-app-title" content="INTERWEBZ Dashboard" />
 <meta name="application-name" content="INTERWEBZ Dashboard" />
@@ -515,9 +515,9 @@ Prepaid codes you have previously claimed.
 <div>
 </div>
 </div>
-<script src="/livewire/livewire.js?id=90730a3b0e7144480175" data-turbo-eval="false" data-turbolinks-eval="false" type="c659e14fb915a891c062460f-text/javascript"></script><script data-turbo-eval="false" data-turbolinks-eval="false" type="c659e14fb915a891c062460f-text/javascript">window.livewire = new Livewire();window.Livewire = window.livewire;window.livewire_app_url = '';window.livewire_token = 'UXIKidbBJgwBYKJ4qtj7IBpN7MWWWo0SZBfvlRqk';window.deferLoadingAlpine = function (callback) {window.addEventListener('livewire:load', function () {callback();});};let started = false;window.addEventListener('alpine:initializing', function () {if (! started) {window.livewire.start();started = true;}});document.addEventListener("DOMContentLoaded", function () {if (! started) {window.livewire.start();started = true;}});</script>
-<script src="/js/app.js?id=3ca22a1bfa1495468248" defer type="c659e14fb915a891c062460f-text/javascript"></script>
+<!-- <script src="/livewire/livewire.js?id=90730a3b0e7144480175" data-turbo-eval="false" data-turbolinks-eval="false" type="c659e14fb915a891c062460f-text/javascript"></script><script data-turbo-eval="false" data-turbolinks-eval="false" type="c659e14fb915a891c062460f-text/javascript">window.livewire = new Livewire();window.Livewire = window.livewire;window.livewire_app_url = '';window.livewire_token = 'UXIKidbBJgwBYKJ4qtj7IBpN7MWWWo0SZBfvlRqk';window.deferLoadingAlpine = function (callback) {window.addEventListener('livewire:load', function () {callback();});};let started = false;window.addEventListener('alpine:initializing', function () {if (! started) {window.livewire.start();started = true;}});document.addEventListener("DOMContentLoaded", function () {if (! started) {window.livewire.start();started = true;}});</script>
+<script src="/js/app.js?id=3ca22a1bfa1495468248" defer type="c659e14fb915a891c062460f-text/javascript"></script> -->
 <script src="https://js.stripe.com/v3/" type="c659e14fb915a891c062460f-text/javascript"></script>
-<script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c659e14fb915a891c062460f-|49" defer></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/v84a3a4012de94ce1a686ba8c167c359c1696973893317" integrity="sha512-euoFGowhlaLqXsPWQ48qSkBSCFs3DPRyiwVu3FjR96cMPx+Fr+gpWRhIafcHwqwCqWS42RZhIudOvEI+Ckf6MA==" data-cf-beacon='{"rayId":"84eb3da6cfbc7c39","version":"2024.1.0","token":"6804e66e506340e3a1643802f2023a2c"}' crossorigin="anonymous"></script>
+<!-- <script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c659e14fb915a891c062460f-|49" defer></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/v84a3a4012de94ce1a686ba8c167c359c1696973893317" integrity="sha512-euoFGowhlaLqXsPWQ48qSkBSCFs3DPRyiwVu3FjR96cMPx+Fr+gpWRhIafcHwqwCqWS42RZhIudOvEI+Ckf6MA==" data-cf-beacon='{"rayId":"84eb3da6cfbc7c39","version":"2024.1.0","token":"6804e66e506340e3a1643802f2023a2c"}' crossorigin="anonymous"></script> -->
 </body>
 </html>
