client 1st done

--- a/community/Latest-activity/latest-activity.html
+++ b/community/Latest-activity/latest-activity.html
@@ -44,7 +44,7 @@
 </a>
 <div class="p-header-logo p-header-logo--image d-none d-md-block ">
 <a href="/index.html">
-<img src="logo.svg" srcset alt="INTERWEBZ" width="35px" height="35px" />
+<img src="./styles/interwebz/xenforo/logo.svg" srcset alt="INTERWEBZ" width="35px" height="35px" />
 </a>
 </div>
 <!-- <div class="p-nav-smallLogo d-none d-md-block d-lg-none">
