--- a/community/account/account-details.html
+++ b/community/account/account-details.html
@@ -267,7 +267,7 @@
                         </li>
                         <li>
                             <div class="p-navEl ">
-                                <a href="/community/members/toufiq.93264/" class="p-navEl-link " data-xf-key="alt+3" data-nav-id="defaultYourProfile">Your profile</a>
+                                <a href="/Profile/profile.html" class="p-navEl-link " data-xf-key="alt+3" data-nav-id="defaultYourProfile">Your profile</a>
                             </div>
                         </li>
                         <li>
