--- a/community/Register/register.html
+++ b/community/Register/register.html
@@ -44,7 +44,7 @@
 </a>
 <div class="p-header-logo p-header-logo--image d-none d-md-block ">
 <a href="/index.html">
-<img src="logo.svg" srcset alt="INTERWEBZ" width="35px" height="35px" />
+<img src="./styles/interwebz/xenforo/logo.svg" srcset alt="INTERWEBZ" width="35px" height="35px" />
 </a>
 </div>
 <!-- <div class="p-nav-smallLogo d-none d-md-block d-lg-none">
@@ -229,7 +229,7 @@
 			<dl class="formRow formRow--input">
 			<dt class="modal-email-dt">
 			<div class="formRow-labelWrapper">
-			<label class="formRow-label modal-email" for="_xfUid-1-1706288227">username</label>
+			<label class="formRow-label modal-email" for="_xfUid-1-1706288227">Username</label>
 			<p class=" modal-email" >Required</p>
 			</div>
 			</dt>
@@ -241,7 +241,7 @@
 			<dl class="formRow formRow--input">
 				<dt class="modal-email-dt">
 				<div class="formRow-labelWrapper">
-				<label class="formRow-label modal-email" for="_xfUid-1-1706288227">email</label>
+				<label class="formRow-label modal-email" for="_xfUid-1-1706288227">Email</label>
 				<p class=" modal-email" for="_xfUid-1-1706288227">Required</p>
 				</div>
 				</dt>
@@ -267,7 +267,7 @@
 			</div>
 			</div>
 			</div>
-			<p style="float: left; color: #9584B2;" class="modal-forget" data-xf-click="overlay">Entering a password is required.</p>
+			<p style="float: left; color: #9584B2;" class="" >Entering a password is required.</p>
 			</dd>
 			</dl>
 			<dl class="formRow formRow--input">
@@ -500,7 +500,7 @@ Register
 </div>
 </div>
 </div>
-<p style="float: left; color: #9584B2;" class="modal-forget" data-xf-click="overlay">Entering a password is required.</p>
+<p style="float: left; color: #9584B2;" class="" >Entering a password is required.</p>
 </dd>
 </dl>
 <dl class="formRow formRow--input">
